--- a/如何上传.md
+++ b/如何上传.md
@@ -2,8 +2,8 @@
 
 ### 添加配置
 
-1. 找到想要添加到的 type
-2. 在 "posts" 下面的 [] 里面加一个大括号, 后面加逗号 (英文逗号)
+#### 1. 找到想要添加到的 type
+#### 2. 在 "posts" 下面的 [] 里面加一个大括号, 后面加逗号 (英文逗号)
 
 例子:
 ```json
@@ -17,7 +17,7 @@
 ]
 ```
 
-3. 添加信息, 注意要加引号和逗号!
+#### 3. 添加信息, 注意要加引号和逗号!
 
 ```
 "date": 拍摄日期,
@@ -40,10 +40,10 @@
 },
 ```
 
-4. 创建文件夹: 在 /src/assets/[类别]/ 下面创建一个文件夹.
+#### 4. 创建文件夹: 在 /src/assets/[类别]/ 下面创建一个文件夹.
 
 文件夹的格式是 [日期]-[标题第一个单词小写].
-例子: 如果配置写成上面那个例子那样的话, 
+例子: 如果配置写成上面那个例子那样的话,
 文件名就是 2019-11-10-view,
 创建到 /src/assets/photography 文件夹里
 
