--- a/如何上传.md
+++ b/如何上传.md
@@ -12,8 +12,7 @@
 [
     {
 
-    },
-    ...
+    }
 ]
 ```
 
@@ -55,5 +54,6 @@
 3. 文件 > 导出 > 导出为...
 4. 左上角缩放全部点加号, 选择 0.25x
 5. 右上角格式选择 JPG, 100%
-6. 点导出, 选择要导出到的文件夹
-7. 重命名 [文件名].jpg 到 public.
+6. 点导出, 选择要导出到的文件夹 (就是上面第四步创建的文件夹)
+7. 重命名 `[文件名].jpg` 到 `public.jpg`.
+8. 重命名 `[文件名]@0.25x.jpg` 到 `thumb.jpg`
