--- a/如何上传.md
+++ b/如何上传.md
@@ -2,8 +2,10 @@
 
 ### 添加配置
 
-#### 1. 找到想要添加到的 type
-#### 2. 在 "posts" 下面的 [] 里面加一个大括号, 后面加逗号 (英文逗号)
+#### 1. 打开 Atom 编辑器
+#### 2. 打开文件 `/src/content/config.json`
+#### 3. 向下翻找到想要添加到的 type
+#### 4. 在 "posts" 下面的 [] 里面加一个大括号, 后面加逗号 (英文逗号)
 
 例子:
 ```json
@@ -16,10 +18,10 @@
 ]
 ```
 
-#### 3. 添加信息, 注意要加引号和逗号!
+#### 5. 添加信息, 注意要加引号和逗号!
 
 ```
-"date": 拍摄日期,
+"date": 拍摄日期 (这是必须写的),
 "title": 标题 (不写就是 Untitled),
 "format": 文件后缀 (不写就是默认的 jpg),
 "video": 是不是视频 (true 就是是, false 就是不是, 不写的话除了 type 是 video 的以外都是 false, 这个不用加引号)
@@ -39,7 +41,7 @@
 },
 ```
 
-#### 4. 创建文件夹: 在 /src/assets/[类别]/ 下面创建一个文件夹.
+#### 6. 创建文件夹: 在 /src/assets/[类别]/ 下面创建一个文件夹.
 
 文件夹的格式是 [日期]-[标题第一个单词小写].
 例子: 如果配置写成上面那个例子那样的话,
@@ -54,6 +56,20 @@
 3. 文件 > 导出 > 导出为...
 4. 左上角缩放全部点加号, 选择 0.25x
 5. 右上角格式选择 JPG, 100%
-6. 点导出, 选择要导出到的文件夹 (就是上面第四步创建的文件夹)
+6. 点导出, 选择要导出到的文件夹 (就是上面第六步创建的文件夹)
 7. 重命名 `[文件名].jpg` 到 `public.jpg`.
-8. 重命名 `[文件名]@0.25x.jpg` 到 `thumb.jpg`
+8. 重命名 `[文件名]@0.25.jpg` 到 `thumb.jpg`
+
+
+### 测试显示效果
+
+1. 打开文件夹 Charlie-Gallery,
+2. 双击点开 `测试网站.bat`
+3. 打开浏览器, 输入 `localhost:8080` (注意中间的冒号是英文冒号)
+4. 看看效果怎么样
+
+
+### 测试时可能出的问题
+
+1. 如果显示连接失败, 看看测试网站后台有没有报错, 有报错的话截图
+2. 检查 `config.json` 有没有漏掉逗号或者多了逗号, 还有检查
