--- a/如何上传.md
+++ b/如何上传.md
@@ -64,7 +64,7 @@
 ### 测试显示效果
 
 1. 打开文件夹 Charlie-Gallery,
-2. 双击点开 `测试网站.bat`
+2. 双击点开 `测试网站.sh`
 3. 打开浏览器, 输入 `localhost:8080` (注意中间的冒号是英文冒号)
 4. 看看效果怎么样
 
@@ -72,4 +72,16 @@
 ### 测试时可能出的问题
 
 1. 如果显示连接失败, 看看测试网站后台有没有报错, 有报错的话截图
-2. 检查 `config.json` 有没有漏掉逗号或者多了逗号, 还有检查
+2. 检查 `config.json` 有没有漏掉逗号或者多了逗号, 检查是不是英文字符
+3. 如果还不行的话, 截图联系
+
+
+### 发布
+
+1. 打开 GitHub Destkop
+2. 左边更新文件栏选择所有文件
+3. 左下角 Summary 写提交内容 (比如说更新照片)
+4. 左下角点击 `Commit to master`
+5. 点右上角 `Push origin`
+6. 打开文件夹 Charlie-Gallery,
+7. 双击点开 `上传网站.sh`
