--- a/如何上传.md
+++ b/如何上传.md
@@ -14,11 +14,11 @@
 [
     {
 
-    }
+    },
 ]
 ```
 
-#### 5. 添加信息, 注意要加引号和逗号!
+#### 5. 添加信息, 注意要加引号和逗号! 修改完 Ctrl+S 保存.
 
 ```
 "date": 拍摄日期 (这是必须写的),
