--- a/如何上传.md
+++ b/如何上传.md
@@ -65,7 +65,8 @@
 
 1. 打开文件夹 Charlie-Gallery,
 2. 双击点开 `测试网站.sh`
-3. 打开浏览器, 输入 `localhost:8080` (注意中间的冒号是英文冒号)
+3. 等待 `App running at:` 出现
+3. 打开浏览器, 输入 `App running at:` 后面的地址 (注意中间的冒号是英文冒号)
 4. 看看效果怎么样
 
 
@@ -74,6 +75,7 @@
 1. 如果显示连接失败, 看看测试网站后台有没有报错, 有报错的话截图
 2. 检查 `config.json` 有没有漏掉逗号或者多了逗号, 检查是不是英文字符
 3. 如果还不行的话, 截图联系
+4. 如果图片没有加载上, 关掉测试网站窗口重新打开试试
 
 
 ### 发布
